Microsoft model frozen

--- a/jupyter/NNforMSFT.ipynb
+++ b/jupyter/NNforMSFT.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,9 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/minglei/anaconda3/envs/PythonData/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
    "source": [
     "#EDIT THIS SECTION OF CODE TO DESIGN YOUR OWN NEURAL NET.\n",
     "\n",
@@ -82,12 +92,12 @@
     "\n",
     "#Setting general NN info here\n",
     "\n",
-    "number_of_inputs = len(input_df.columns)\n",
+    "number_of_inputs = input_df.shape[0]\n",
     "\n",
-    "number_of_layers = number_of_inputs + 10\n",
-    "\n",
-    "number_of_neurons_per_layer = number_of_layers + 10\n",
-    "\n",
+    "# number_of_layers = number_of_inputs + 10\n",
+    "number_of_layers = number_of_inputs - 2\n",
+    "# number_of_neurons_per_layer = number_of_layers + 10\n",
+    "number_of_neurons_per_layer = number_of_inputs -2\n",
     "\n",
     "#Adding the first input layer\n",
     "model.add(Dense(units=number_of_neurons_per_layer, activation='relu', input_dim=number_of_inputs))\n",
@@ -105,90 +115,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/1000\n",
-      "8398/8398 - 2s - loss: 0.6910 - acc: 0.5376\n",
-      "Epoch 2/1000\n",
-      "8398/8398 - 1s - loss: 0.6908 - acc: 0.5381\n",
-      "Epoch 3/1000\n",
-      "8398/8398 - 2s - loss: 0.6899 - acc: 0.5381\n",
-      "Epoch 4/1000\n",
-      "8398/8398 - 1s - loss: 0.6902 - acc: 0.5381\n",
-      "Epoch 5/1000\n",
-      "8398/8398 - 2s - loss: 0.6906 - acc: 0.5381\n",
-      "Epoch 6/1000\n",
-      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
-      "Epoch 7/1000\n",
-      "8398/8398 - 2s - loss: 0.6906 - acc: 0.5381\n",
-      "Epoch 8/1000\n",
-      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
-      "Epoch 9/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 10/1000\n",
-      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
-      "Epoch 11/1000\n",
-      "8398/8398 - 1s - loss: 0.6905 - acc: 0.5381\n",
-      "Epoch 12/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 13/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 14/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 15/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 16/1000\n",
-      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
-      "Epoch 17/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 18/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 19/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 20/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 21/1000\n",
-      "8398/8398 - 1s - loss: 0.6902 - acc: 0.5381\n",
-      "Epoch 22/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 23/1000\n",
-      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
-      "Epoch 24/1000\n",
-      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
-      "Epoch 25/1000\n",
-      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
-      "Epoch 26/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 27/1000\n",
-      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
-      "Epoch 28/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 29/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 30/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 31/1000\n",
-      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 32/1000\n",
-      "8398/8398 - 1s - loss: 0.6903 - acc: 0.5381\n",
-      "Epoch 33/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 34/1000\n",
-      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
-      "Epoch 35/1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Training the neurons\n",
     "\n",
     "model.fit(\n",
     "    input_df,\n",
     "    output_hot_shot_encoded,\n",
-    "    epochs=1000,\n",
+    "    epochs=100,\n",
     "    shuffle=True,\n",
     "    verbose=2\n",
     ")"
